--- a/efs/portfolio/templates/portfolio/investment_list.html
+++ b/efs/portfolio/templates/portfolio/investment_list.html
@@ -50,6 +50,27 @@
             {% endfor %}
             </tbody>
         </table>
+        {% if investments.has_other_pages %}
+  <ul class="pagination">
+    {% if investments.has_previous %}
+      <li><a href="?page={{ investments.previous_page_number }}">&laquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&laquo;</span></li>
+    {% endif %}
+    {% for i in investments.paginator.page_range %}
+      {% if investments.number == i %}
+        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+      {% else %}
+        <li><a href="?page={{ i }}">{{ i }}</a></li>
+      {% endif %}
+    {% endfor %}
+    {% if investments.has_next %}
+      <li><a href="?page={{ investments.next_page_number }}">&raquo;</a></li>
+    {% else %}
+      <li class="disabled"><span>&raquo;</span></li>
+    {% endif %}
+  </ul>
+{% endif %}
 
      <div class="row">
             <a href="{% url 'portfolio:investment_new' %}" class="row"><span
