--- a/efs/portfolio/templates/portfolio/base.html
+++ b/efs/portfolio/templates/portfolio/base.html
@@ -67,11 +67,10 @@
           <form class="form-inline ml-auto">
             <a href="{% url 'login' %}" class="btn btn-outline-secondary">
             Log In</a>
-
           </form>
+          <li><a class="nav-link lead" href="{% url 'portfolio:signup' %}">Sign Up</a></li>
         {% endif %}
       </div>
-
         </div>
 
 </nav>
