Updated Password Reset and Mutual Funds

--- a/efs/portfolio/templates/registration/login.html
+++ b/efs/portfolio/templates/registration/login.html
@@ -11,6 +11,7 @@
     {% csrf_token %}
     {{ form.as_p}}
         <p><input type="submit" value="Log-in"></p>
+        <a href="{% url 'password_reset'%}" > <u> Forgot Password? </u></a>
   </form>
   </div>
 {% endblock %}
