--- a/efs/portfolio/templates/portfolio/base.html
+++ b/efs/portfolio/templates/portfolio/base.html
@@ -38,6 +38,7 @@
                 <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:customer_list' %}">Customers</a></li>
                 <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:investment_list' %}">Investment</a></li>
                 <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:stock_list' %}">Stocks</a></li>
+                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:mutual_fund_list' %}">Mutual Funds</a></li>
 
             </ul>
 
@@ -101,7 +102,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="thumbnail">
-<img src="{% static 'images/nonstock.jpg' %}" alt="non-stock"/>
+                                <img src="{% static 'images/nonstock.jpg' %}" alt="non-stock"/>
                                 <div class="caption">
                                     <h2>Non-Stock Investments</h2>
                                     <p>Our team also provides advice for Non-Stock investments.</p>
@@ -118,6 +119,17 @@
                                     <h2>Stock Portfolio</h2>
                                     <p>Our Stock portfolios vary across industries.</p>
                                     <p><a class="btn btn-default" href="{% url 'portfolio:Stock_list' %}" role="button">View
+                                        details &raquo;</a></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="thumbnail">
+                                <img src="{% static 'images/stocks.jpg' %}" alt="stocks"/>
+                                <div class="caption">
+                                    <h2>Mutual Funds</h2>
+                                    <p>Our Mutual Funds have had strong stable growth.</p>
+                                    <p><a class="btn btn-default" href="{% url 'portfolio:mutual_fund_list' %}" role="button">View
                                         details &raquo;</a></p>
                                 </div>
                             </div>
