--- a/efs/portfolio/templates/portfolio/home.html
+++ b/efs/portfolio/templates/portfolio/home.html
@@ -20,7 +20,7 @@
 
           </div>
           <div class="card-footer">
-            <a href="{% url 'portfolio:customer_list' %}" class="btn btn-primary">View Details!</a>
+            <a href="{% url 'portfolio:customer_list' %}" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
@@ -45,6 +45,18 @@
           </div>
           <div class="card-footer">
             <a href="{% url 'portfolio:stock_list' %}" class="btn btn-primary">View Details</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="fa-credit-card text-center">
+          <img class="card-img-top" src="{% static 'images/stocks.jpg' %}" alt="" style="height: 200px">
+          <div class="card-body">
+            <h4 class="card-title">MutualFund</h4>
+          </div>
+          <div class="card-footer">
+            <a href="{% url 'portfolio:mutualfund_list' %}" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
