--- a/efs/portfolio/templates/portfolio/portfolio.html
+++ b/efs/portfolio/templates/portfolio/portfolio.html
@@ -155,5 +155,59 @@
         </tbody>
     </table>
 </div>
+<div class="row">
+    <h2 style="padding-left: 15Px">Mutual Fund Information</h2>
+    <p><strong>*Note:</strong> Due to the limit on free API calls, the current price on individual mutual funds may not
+        be accurate. However, the sum of all current mutual funds is current and up to date</p>
+</div>
+<div class="row">
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+        <tr class="bg-info">
+            <th>Customer</th>
+            <th>Symbol</th>
+            <th>Name</th>
+            <th>Shares</th>
+            <th>Initial Mutual Fund Price</th>
+            <th>Initial Mutual Fund Value</th>
+            <th>Current Mutual Fund Price</th>
+            <th>Current Mutual Fund Value</th>
+            <th>Results</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for mutual_fund in mutual_funds %}
+        <tr>
+            <td>{{ mutual_fund.customer }}</td>
+            <td>{{ mutual_fund.symbol }}</td>
+            <td>{{ mutual_fund.name }}</td>
+            <td>{{ mutual_fund.shares|intcomma }}</td>
+            <td>{{ mutual_fund.purchase_price|intcomma }}</td>
+            <td>{{ mutual_fund.initial_mutual_fund_value|intcomma }}</td>
+            <td>{{ mutual_fund.current_mutual_fund_price|intcomma }}</td>
+            <
+            <td>{{ mutual_fund.current_mutual_fund_value|intcomma }}</td>
+            <td>{{ mutual_fund.current_mutual_fund_value|sub:mutual_fund.initial_mutual_fund_value|intcomma }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+        <tr class="bg-info">
+            <th>Total of Initial Mutual Funds</th>
+            <th>Total of Current Mutual Funds</th>
+            <th>Results</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>{{ sum_initial_mutual_fund_value|intcomma }}</td>
+            <td>{{ sum_current_mutual_fund_value|intcomma }}</td>
+            <td>{{ sum_current_mutual_fund_value|sub:sum_initial_mutual_fund_value|intcomma }}</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
 {% endblock %}
