--- a/efs/portfolio/templates/portfolio/home.html
+++ b/efs/portfolio/templates/portfolio/home.html
@@ -56,7 +56,7 @@
             <h4 class="card-title">MutualFund</h4>
           </div>
           <div class="card-footer">
-            <a href="{% url 'portfolio:mutualfund_list' %}" class="btn btn-primary">View Details</a>
+            <a href="{% url 'portfolio:mutual_fund_list' %}" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
