Updated Mutual Funds data

--- a/efs/portfolio/templates/portfolio/portfolio.html
+++ b/efs/portfolio/templates/portfolio/portfolio.html
@@ -158,7 +158,7 @@
 <div class="row">
     <h2 style="padding-left: 15Px">Mutual Fund Information</h2>
     <p><strong>*Note:</strong> Due to the limit on free API calls, the current price on individual mutual funds may not
-        be accurate. However, the sum of all current mutual funds is current and up to date</p>
+        be accurate.</p>
 </div>
 <div class="row">
     <table class="table table-striped table-bordered table-hover">
