--- a/efs/portfolio/templates/portfolio/customer_list.html
+++ b/efs/portfolio/templates/portfolio/customer_list.html
@@ -18,7 +18,7 @@
 <div class="row"><br>
 
     <h2 style="padding-left: 15Px"><u>Customer Information</u></h2>
-    </div>
+</div>
     <div>
         <table class="table table-hover table-responsive-lg text-center">
             <thead>
@@ -59,6 +59,12 @@
         </table>
 
 
+    </div>
+
+        <div class="row">
+            <a href="{% url 'portfolio:customer_new' %}" class="row"><span
+                    class="btn btn-primary">Add Customers</span></a>
+        </div>
     </div>
 
 </body>
