--- a/efs/portfolio/templates/portfolio/mutualfund_list.html
+++ b/efs/portfolio/templates/portfolio/mutualfund_list.html
@@ -1,38 +1,25 @@
 {% extends 'portfolio/base.html' %}
 {% block content %}
 
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Eagle Financial</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<html lang="en">
+    <body>
 
-</head>
-<body>
-<style>
-    body {
-        background-color: beige;
-    }
-</style>
-<div class="container">
-    <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-            <div class="panel panel-primary">
-                <div class="panel-heading">Welcome!</div>
-                <div class="panel-body">
-                    Eagle Financial Services, your Midwest Financial Services Partner.
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
+    <style>
+        body {
+            background-color: beige;
+        }
+    </style>
+  <header class="jumbotron my-4 table-responsive" style="background: white">
+      <p class="lead text-nowrap"><b>Eagle Financial Services, your Midwest Financial Services Partner</b></p>
+         </header>
 <div class="row">
-    <h2 style="padding-left: 15Px">Mutual Fund Information</h2>
+    <h2 style="padding-left: 15Px"><u>Mutual Fund Information</u></h2>
 </div>
 <div>
-    <table class="table table-striped table-bordered table-hover">
-        <thead>
-        <tr class="bg-info">
+    <table class="table table-hover table-responsive-lg text-center">
+             <thead>
+            <tr bgcolor="white">
             <th>Customer Number</th>
             <th>Customer Name</th>
             <th>Symbol</th>
@@ -45,7 +32,7 @@
         </thead>
         <tbody>
         {% for mutual_fund in mutual_funds %}
-        <tr>
+        <tr bgcolor="white">
             <td>{{ mutual_fund.customer.cust_number }}</td>
             <td>{{ mutual_fund.customer.name }}</td>
             <td>{{ mutual_fund.symbol }}</td>
