updated mutual fund image

--- a/efs/portfolio/templates/portfolio/portfolio.html
+++ b/efs/portfolio/templates/portfolio/portfolio.html
@@ -157,7 +157,7 @@
 </div>
 <div class="row">
     <h2 style="padding-left: 15Px">Mutual Fund Information</h2>
-    <p><strong>*Note:</strong> Due to the limit on free API calls, the current price on individual mutual funds may not
+    <p><strong>*Note:</strong> Due to the limited free API calls, the current price on individual mutual funds may not
         be accurate.</p>
 </div>
 <div class="row">
