--- a/efs/portfolio/templates/portfolio/home.html
+++ b/efs/portfolio/templates/portfolio/home.html
@@ -51,7 +51,7 @@
 
       <div class="col">
         <div class="fa-credit-card text-center">
-          <img class="card-img-top" src="{% static 'images/stocks.jpg' %}" alt="" style="height: 200px">
+          <img class="card-img-top" src="{% static 'images/mutualfund.jpg' %}" alt="" style="height: 200px">
           <div class="card-body">
             <h4 class="card-title">MutualFund</h4>
           </div>
