--- a/efs/portfolio/templates/portfolio/base.html
+++ b/efs/portfolio/templates/portfolio/base.html
@@ -34,11 +34,11 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
-                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:home' %}">Home</a></li>
-                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:customer_list' %}">Customers</a></li>
-                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:investment_list' %}">Investment</a></li>
-                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:stock_list' %}">Stocks</a></li>
-                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:mutual_fund_list' %}">Mutual Funds</a></li>
+                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:home' %}"><b>Home</b></a></li>
+                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:customer_list' %}"><b>Customers</b></a></li>
+                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:investment_list' %}"><b>Investment</b></a></li>
+                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:stock_list' %}"><b>Stocks</b></a></li>
+                <li class="nav-item lead"><a class=nav-link href="{% url 'portfolio:mutual_fund_list' %}"><b>Mutual Funds</b></a></li>
 
             </ul>
 
